--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1{
     justify-content: center;
     align-items: center;
     gap:10px;
-    height:500px;
+    height:600px;
     width:100px;
     border: 1px solid black;
 }
@@ -38,12 +38,12 @@ button{
     cursor:pointer;
 }
 .board{
-    width:500px;
-    height:500px;
+    width:600px;
+    height:600px;
     border: 1px solid black;
     display:grid;
-    align-items: center;
-    border-left: none;
+   
+    
 
 }
 .container{
@@ -67,6 +67,13 @@ span{
     color:rgb(0, 174, 255);
     font-size: 18px;
 }
+label{
+    
+    color:rgb(0, 174, 255);
+    font-size: 18px;
+    
+}
+
 
 .size-slider{
     -webkit-appearance:none;
