--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 h1{
     text-align: center;
     font-size: 48px;
-    color: rgb(0, 174, 255);
+    color: rgb(0, 100, 255);
 }
-
+body{
+    background-image: linear-gradient(rgb(188, 229, 248) 50% , rgb(238, 250, 255));
+    font-family: Arial;
+}
 .buttons{
     display:flex;
     flex-direction: column; 
@@ -18,10 +21,10 @@ h1{
 button{
     font-size:18px;
     width:70px;
-    color: rgb(0, 174, 255);
-    background-color: rgb(0, 255, 200) ;
+    color: rgb(0, 100, 255);
+    background-color: rgb(143, 210, 241) ;
     outline:none;
-    border:1px solid blue;
+    border:1px solid rgb(0, 0, 0);
     border-radius: 5px;
     cursor:pointer;
 }
@@ -30,9 +33,9 @@ button{
     
     width:50px;
     color: rgb(0, 174, 255);
-    background-color: rgb(0, 255, 200) ;
+    background-color: rgb(143, 210, 241) ;
     outline:none;
-    border:1px solid blue;
+    border:1px solid black;
     
     border-radius: 5px;
     cursor:pointer;
@@ -50,6 +53,8 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 32%;    
+    box-shadow: 3px 3px 3px grey, 0 0 3px black;
 }
 
 .slider{
@@ -57,6 +62,8 @@ button{
     align-items: center;
     display:flex;
     flex-direction: column;
+    padding-bottom:1.95%;
+    
 }
 
 p{
@@ -83,7 +90,7 @@ label{
     border-radius: 10px;
     background:linear-gradient(90deg, rgb(0,174,255) 16%, white 16%);
     height:7px;
-    box-shadow: 0px 1px 5px 1px;
+    box-shadow: 3px 3px 3px grey, 0 0 3px black;
     opacity: 0.7;
 }
 
@@ -108,3 +115,4 @@ label{
     cursor:pointer;
     background-color:rgb(0, 174, 255);
 }
+
